crates/dsql-core/tests/it/snapshots/it__services__column_hover_uses_the_provider_formatted_type.snap
---
source: crates/dsql-core/tests/it/services.rs
expression: "hover(&bowl, source.find(\"label\").expect(\"test text\")).await"
---
column `label`: character varying(20) (not null)
