crates/dsql-core/tests/it/snapshots/it__services__hover_on_variables_reports_bindings.snap
---
source: crates/dsql-core/tests/it/services.rs
expression: info
---
`search` — `params.search`: text (query-time)
